2006-05-17  Richard Levitte  <richard@levitte.org>

	* po/sv.po: Another fuzzy to re-translate.

2006-05-16  Timothy Brownawell  <tbrownaw@gmail.com>

	* automate.cc: Uncomment automate_common_ancestors.
	* tests/t_automate_common_ancestors.at, testsuite.at: Test it.
	* monotone.texi: Document it.
	* cmd_automate.cc: Add it to the command description for automate.

2006-05-17  Matt Johnston  <matt@ucc.asn.au>

	* paths.cc (internal_string_to_split_path): move from cset.hh to
	here, make it share the path splitting with fully_normalized_path().
	(has_bad_chars): use lookup table to check bad chars.
	(bad_component): don't compare string vs char* every time.
	* roster.cc, cset.hh: internal_string_to_split_path changes
	* vocab.cc (verify(hexenc<id>): .empty() rather than == ""

2006-05-16  Matt Johnston  <matt@ucc.asn.au>

	* roster.cc (parse_from): don't use lexical_cast, avoid copying a
	marking_t.

2006-05-15  Matt Johnston  <matt@ucc.asn.au>

	* cmd_diff_log (log, dump_diffs): limit diffs to restricted files,
	updated for new restrictions code.
	* tests/t_log_diffs.at: A test for log --diffs

2006-05-14  Derek Scherger  <derek@echologic.com>

	* database.cc (info): allow any number of rows to be returned from
	query of next_roster_node_number
	* tests/t_db_init_info.at: new test of info on a new database
	* testsuite.at: call it

2006-05-14  Lapo Luchini  <lapo@lapo.it>

	* po/it.po: Translated a few more strings to Italian (115 to go).

2006-05-14  Richard Levitte  <richard@levitte.org>

	* po/sv.po: A fuzzy to correct.

2006-05-13  Matthew Gregan  <kinetik@orcon.net.nz>

	* tests/t_automate_get_current_revision_id.at: Canonicalise output
	before comparison--fixes test on Win32.

2006-05-13  Matt Johnston  <matt@ucc.asn.au>

	* cmd_diff_log (log): don't get the roster unless we have restrictions.

2006-05-13  Timothy Brownawell  <tbrownaw@gmail.com>

	* netsync.cc: (process_hello_cmd) Build our merkle tries after
	replying to the server.