@@ -62,7 +62,6 @@ public:
   diff_type diff_format;
   bool diff_args_provided;
   utf8 diff_args;
-  bool use_lca;
   bool execute;
   utf8 bind_address;
   utf8 bind_port;
